docs/0.8/_sources/api/gammapy.data.EventList.rst.txt
EventList
=========

.. currentmodule:: gammapy.data

.. autoclass:: EventList
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EventList.altaz
      ~EventList.altaz_frame
      ~EventList.altaz_from_table
      ~EventList.energy
      ~EventList.galactic
      ~EventList.observation_dead_time_fraction
      ~EventList.observation_live_time_duration
      ~EventList.observation_time_duration
      ~EventList.observation_time_end
      ~EventList.observation_time_start
      ~EventList.observatory_earth_location
      ~EventList.offset
      ~EventList.pointing_radec
      ~EventList.radec
      ~EventList.time
      ~EventList.time_ref

   .. rubric:: Methods Summary

   .. autosummary::

      ~EventList.check
      ~EventList.filter_circular_region
      ~EventList.peek
      ~EventList.plot_energy
      ~EventList.plot_energy_offset
      ~EventList.plot_image
      ~EventList.plot_offset2_distribution
      ~EventList.plot_time
      ~EventList.read
      ~EventList.select_circular_region
      ~EventList.select_energy
      ~EventList.select_offset
      ~EventList.select_row_subset
      ~EventList.select_sky_box
      ~EventList.select_sky_cone
      ~EventList.select_sky_ring
      ~EventList.select_time
      ~EventList.stack

   .. rubric:: Attributes Documentation

   .. autoattribute:: altaz
   .. autoattribute:: altaz_frame
   .. autoattribute:: altaz_from_table
   .. autoattribute:: energy
   .. autoattribute:: galactic
   .. autoattribute:: observation_dead_time_fraction
   .. autoattribute:: observation_live_time_duration
   .. autoattribute:: observation_time_duration
   .. autoattribute:: observation_time_end
   .. autoattribute:: observation_time_start
   .. autoattribute:: observatory_earth_location
   .. autoattribute:: offset
   .. autoattribute:: pointing_radec
   .. autoattribute:: radec
   .. autoattribute:: time
   .. autoattribute:: time_ref

   .. rubric:: Methods Documentation

   .. automethod:: check
   .. automethod:: filter_circular_region
   .. automethod:: peek
   .. automethod:: plot_energy
   .. automethod:: plot_energy_offset
   .. automethod:: plot_image
   .. automethod:: plot_offset2_distribution
   .. automethod:: plot_time
   .. automethod:: read
   .. automethod:: select_circular_region
   .. automethod:: select_energy
   .. automethod:: select_offset
   .. automethod:: select_row_subset
   .. automethod:: select_sky_box
   .. automethod:: select_sky_cone
   .. automethod:: select_sky_ring
   .. automethod:: select_time
   .. automethod:: stack
